Fix the flickering in Chrome. Break safari in every way possible.

--- a/less/angular/pages/home.less
+++ b/less/angular/pages/home.less
@@ -384,27 +384,26 @@
   .front {
     background-color: @privacyred;
     float: none;
+    height: inherit;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 900;
-    width: inherit;
-    height: inherit;
     text-align: center;
-    -webkit-transform: rotateX(0deg) rotateY(0deg);
-    -moz-transform: rotateX(0deg) rotateY(0deg);
-    transform: rotateX(0deg) rotateY(0deg);
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
+    width: inherit;
 
     &::before, &::after {
-      border-color: @privacyred;
+      z-index: -1;
+    }
+
+    &::before {
+      border-bottom: 21.5px solid @privacyred;
+      top: -20px;
+    }
+
+    &::after {
+      border-top: 21.5px solid @privacyred;
+      bottom: -20px;
+      left: 0;
     }
 
     svg {
@@ -418,15 +417,41 @@
   .back {
     background-color: @lightyellow;
     float: none;
+    left: 0;
+    height: inherit;
     position: absolute;
     top: 0;
-    left: 0;
-    z-index: 800;
     width: inherit;
-    height: inherit;
+    z-index: -1;
     -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-179deg);
-    transform: rotateY(-179deg);
+    -moz-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+
+    &::before, &::after {
+      left: 0;
+      z-index: -2;
+    }
+
+    &::before {
+      border-bottom: 21.5px solid @lightyellow;
+      top: -20px;
+    }
+
+    &::after {
+      border-top: 21.5px solid @lightyellow;
+      bottom: -20px;
+    }
+  }
+
+  .front, .back {
+    width: 7.5rem;
+    height: 4.33rem;
+    margin: 2.165rem 0;
+    border-style: solid;
+    border-width: 0;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-radius: 0.4rem;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
@@ -435,52 +460,14 @@
     backface-visibility: hidden;
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
-
     &::before, &::after {
-      border-color: @lightyellow;
-    }
-  }
-  .front, .back {
-    width: 7.5rem;
-    height: 4.33rem;
-    margin: 2.165rem 0;
-    border-left: solid 0 transparent;
-    border-right: solid 0 transparent;
-    border-radius: 0.4rem;
-    &::before, &::after {
-      content: "";
+      content: '';
+      background-color: transparent;
+      border-left: 37.5px solid transparent;
+      border-right: 37.5px solid transparent;
+      height: 0;
       position: absolute;
-      z-index: -1;
-      width: 5.3035rem;
-      height: 5.3035rem;
-      -webkit-transform: scaleY(0.5774) rotate(-45deg);
-      -ms-transform: scaleY(0.5774) rotate(-45deg);
-      transform: scaleY(0.5774) rotate(-45deg);
-      background-color: inherit;
-      left: 1.04835rem;
-
-      border-radius: 0.4rem;
-
-      -webkit-backface-visibility: hidden;
-      -moz-backface-visibility: hidden;
-      backface-visibility: hidden;
-      -webkit-transition: all .4s ease-in-out;
-      transition: all .4s ease-in-out;
-    }
-    &::before {
-      top: -2.65165rem;
-      border-top-style: solid;
-      border-top-width: 0.07071rem;
-      border-right-style: solid;
-      border-right-width: 0.07071rem;
-    }
-
-    &::after {
-      bottom: -2.5rem;
-      border-bottom-style: solid;
-      border-bottom-width: 0.07071rem;
-      border-left-style: solid;
-      border-left-width: 0.07071rem;
+      width: 0;
     }
   }
 }
@@ -505,16 +492,14 @@
     right: 1%;
     &:hover {
       .front {
-        z-index: 900;
         -webkit-transform: rotateY(180deg);
         -moz-transform: rotateY(180deg);
         transform: rotateY(180deg);
       }
       .back {
-        z-index: 1000;
-        -webkit-transform: rotateX(0deg) rotateY(0deg);
-        -moz-transform: rotateX(0deg) rotateY(0deg);
-        transform: rotateX(0deg) rotateY(0deg);
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
       }
     }
   }
@@ -552,6 +537,7 @@
 
 .sclera {
   background: @white;
+  border-radius: 50%;
   width: 100%;
   height: 100%;
   position: relative;
